sitter-tenableaudits/corpus/spec_item
==========================
Spec Item
==========================

#<spec>
#  <type>CIS</type>
#  <name>Windows 7 Level 1</name>
#  <version>3.1.0</version>
#  <link>https://workbench.cisecurity.org/files/1929</link>
#</spec>

---

(audit
  (spec_block
    (spec_type)
    (spec_name)
    (spec_version)
    (spec_link)))
